force-app/main/default/objects/Shipment__c/fields/Customers__c.field-meta.xml
<CustomField>
    <fullName>Customers__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customers</label>
    <referenceTo>Customers__c</referenceTo>
    <relationshipLabel>Shipments</relationshipLabel>
    <relationshipName>Shipments</relationshipName>
    <type>Lookup</type>
</CustomField>