force-app/main/default/objects/Shipment__c/fields/In_transit_Date__c.field-meta.xml
<CustomField>
    <fullName>In_transit_Date__c</fullName>
    <label>In-transit Date</label>
    <type>Date</type>
</CustomField>