force-app/main/default/objects/Shipment__c/fields/Shipment_Status__c.field-meta.xml
<CustomField>
    <fullName>Shipment_Status__c</fullName>
    <label>Shipment Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Scheduled</fullName>
            </value>
            <value>
                <fullName>In-Transit</fullName>
            </value>
            <value>
                <fullName>Delivered</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>