force-app/main/default/objects/Shipment__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Actual_Delivery_Date__c</columns>
    <columns>Customers__c</columns>
    <columns>Estimated_Delivery_Date__c</columns>
    <columns>In_transit_Date__c</columns>
    <columns>Shipment_Status__c</columns>
    <columns>Tracking_Number__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>